--- a/WhyDataAnalysis.ipynb
+++ b/WhyDataAnalysis.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "Decision making plays a large role in the stock markets with heuristics as a main driving factor. Ever heard the phrase _buy low, sell high_? Its purpose is to convince you not to give into your emotions when playing high risk games. The market will dip, spike and throw your money around, so while it's tempting to listen to the butterflies in your stomach, risk is one big reason why you should not...\n",
     "\n",
-    "First let's take look at the [Consumer Sentiment Index](http://www.sca.isr.umich.edu). This is a fortunate source because it quantifies a heurestical perspective of our economy. A lot of times we will have to install our own measurements, which would not come anywhere near such well established survey.\n",
+    "First let's take look at the [Consumer Sentiment Index](http://www.sca.isr.umich.edu). This is a fortunate source because it quantifies a heurestical perspective of our economy. A lot of times we will have to install our own measurements, which would not come anywhere near such a well established survey.\n",
     "\n",
     "We will be cross referencing this with an actual measure, the Dow Jones Industrial Average, thereby treating it as a projection plan of the stock market."
    ]
