--- a/WhyDataAnalysis.ipynb
+++ b/WhyDataAnalysis.ipynb
@@ -184,7 +184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In other words, the CSI is nearly two and a half times more volatile, that is, two and a half times more responsive to market effects than our benchmark, the Dow Jones Industrial Average. When making a big decision, we won't want to change plans at every small dip and spike. Investing in a security based purely off of heuristical judgment would be very risky."
+    "In other words, the CSI is nearly two and a half times more volatile, that is, two and a half times more responsive to market effects than our benchmark, the Dow Jones Industrial Average. When making a big decision, we don't want to change plans at every small dip and spike. Investing in a security based purely off of heuristical judgment would be very risky."
    ]
   },
   {
