--- a/WhyDataAnalysis.ipynb
+++ b/WhyDataAnalysis.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "Just a few examples of where this is definitely true:\n",
     " 1. Portfolio Investments\n",
-    " 2. Project Budgeting\n",
+    " 2. Project Strategy\n",
     " 3. Third Party Management\n",
     "  \n",
     "Here are some reasons they should listen to your numbers...\n",
