--- a/WhyDataAnalysis.ipynb
+++ b/WhyDataAnalysis.ipynb
@@ -170,7 +170,7 @@
     "plt.axhline(y=0, color='black')\n",
     "plt.legend()\n",
     "plt.grid()\n",
-    "plt.title('Percent Change (Reutrns)')\n",
+    "plt.title('Percent Change (Returns)')\n",
     "\n",
     "pylab.show()\n",
     "\n",
@@ -184,7 +184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In other words, the CSI is nearly two and a half times more volatile, that is, two and a half times more responsive to market effects than our benchmark, the Dow Jones Industrial Average. When making a big decision, we don't want to change plans at every small dip and spike. Investing in a security based purely off of heuristical judgment would be very risky."
+    "The CSI is nearly two and a half times more volatile. In other words, two and a half times more responsive to market effects than our benchmark, the Dow Jones Industrial Average. When making a big decision, we don't want to change plans at every small dip and spike. Investing in a security based purely off of heuristical judgment would be very risky."
    ]
   },
   {
