--- a/WhyDataAnalysis.ipynb
+++ b/WhyDataAnalysis.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Let's explore why numbers are important for business.\n",
     "\n",
-    "Given that you're in a meeting, and you're the only data-head in the bunch, why higher management should listen to you?\n",
+    "Given that you're in a meeting, and you're the only data-head in the bunch, why should higher management listen to you?\n",
     "\n",
     "Some situations where this might be the case:\n",
     " 1. Investments\n",
