--- a/Regression.ipynb
+++ b/Regression.ipynb
@@ -92,57 +92,17 @@
     "        \n",
     "reg = Reg()\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "\n",
     "AMZN = quandl.get(\"XNAS/AMZN\", authtoken=\"zo7kqTM5GbbuJUNsTKVa\",\n",
     "                    trim_start=\"2011-1-1\",trim_end=\"2011-12-1\")\n",
     "\n",
     "EBAY = quandl.get(\"YAHOO/EBAY\", authtoken=\"zo7kqTM5GbbuJUNsTKVa\",\n",
     "                    trim_start=\"2011-1-1\",trim_end=\"2011-12-1\")\n",
     "\n",
-    "stocks = pd.DataFrame({\"AMZN\":AMZN['Close'], \"EBAY\":EBAY['Close']})\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "%matplotlib inline \n",
+    "stocks = pd.DataFrame({\"AMZN\":AMZN['Close'], \"EBAY\":EBAY['Close']})\n",
     "\n",
-    "reg.plot(stocks['AMZN'], stocks['EBAY'])"
+    "reg.plot(stocks['AMZN', 'EBAY'])\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
