updates and new tool

--- a/web_scraper.ipynb
+++ b/web_scraper.ipynb
@@ -2,7 +2,75 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  * [Find jobs](/en)\n",
+      "  * [Amazon culture &amp; benefits](/en/working/working-amazon)\n",
+      "  * [Locations](/en/locations)\n",
+      "  * [Teams](/en/business_categories)\n",
+      "  * [Job categories](/en/job_categories)\n",
+      "  * [Help](/en/faqs)\n",
+      "  * [Čeština](/cs/business_categories/university-recruiting)\n",
+      "  * [Deutsch](/de/business_categories/university-recruiting)\n",
+      "  * [English](/en/business_categories/university-recruiting)\n",
+      "  * [English, British](/en-gb/business_categories/university-recruiting)\n",
+      "  * [Español (Europeo)](/es/business_categories/university-recruiting)\n",
+      "  * [Français](/fr/business_categories/university-recruiting)\n",
+      "  * [Italiano](/it/business_categories/university-recruiting)\n",
+      "  * [日本語](/jp/business_categories/university-recruiting)\n",
+      "  * [Polski](/pl/business_categories/university-recruiting)\n",
+      "  * [Português, Brasil](/pt/business_categories/university-recruiting)\n",
+      "  * [简体中文](/zh/business_categories/university-recruiting)\n",
+      "[](/en)\n",
+      "](/en)\n",
+      "![](https://static.amazon.jobs/business_categories/14/images/uni-bc-\n",
+      "hdr.jpg?1469074250)![](https://static.amazon.jobs/business_categories/14/thumbnails/mod-\n",
+      "[](https://www.facebook.com/InsideAmazon/?Amazon.jobs=footer)[](https://www.linkedin.com/company/amazon?Amazon.jobs=footer)[](https://www.instagram.com/insideamazon/?Amazon.jobs=footer)[](https://twitter.com/InsideAmazon?Amazon.jobs=footer)\n",
+      "  * [Job Categories](/en/job_categories)\n",
+      "  * [Teams](/en/business_categories)\n",
+      "  * [Locations](/en/locations)\n",
+      "  * [Military recruiting](/en/military)\n",
+      "  * [Fulfillment center jobs](/en/business_categories/fulfillment-operations)\n",
+      "  * [Culture](/en/working/working-amazon)\n",
+      "  * [Benefits](/en/benefits)\n",
+      "  * [Pioneer stories](/en/pioneers)\n",
+      "  * [Diversity at Amazon](http://www.amazon.com/b/ref=tb_surl_diversity/?node=10080092011)\n",
+      "  * [Our leadership principles](/en/principles)\n",
+      "  * [FAQ](/en/faqs)\n",
+      "  * [How to apply](/en/faqs#applying-at-amazon)\n",
+      "  * [Disability accommodations](/en/disability/us)\n",
+      "  * [EU Data policy](/en/eu_data_policy)\n",
+      "  * [](/en)\n",
+      "Amazon is an Equal Opportunity-Affirmative Action Employer – Minority / Female\n",
+      "/ Disability / Veteran / Gender Identity / Sexual Orientation.\n",
+      "[Privacy and Data](/en/privacy/us)[Impressum](/en/impressum)\n",
+      "Amazon is an Equal Opportunity-Affirmative Action Employer – Minority / Female\n",
+      "/ Disability / Veteran / Gender Identity / Sexual Orientation.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from html2text import html2text\n",
+    "import requests\n",
+    "\n",
+    "r = requests.get('https://www.amazon.jobs/en/business_categories/university-recruiting?base_query=&loc_query=&job_count=10&result_limit=10&sort=relevant&cache')\n",
+    "\n",
+    "for line in html2text(r.text).split('\\n'):\n",
+    "    if '/' in line.lower():\n",
+    "        print(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -11,303 +79,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Skip navigation\n",
-      "\n",
-      "[ ](/ \"YouTube Home\" )\n",
-      "\n",
-      "[Upload](//www.youtube.com/upload)\n",
-      "\n",
-      "Sign in\n",
-      "\n",
-      "Search\n",
-      "\n",
-      "Loading...\n",
-      "\n",
-      "Close\n",
-      "\n",
-      "Yeah, keep it Undo Close\n",
-      "\n",
-      "![](//s.ytimg.com/yts/img/pixel-vfl3z5WfW.gif)\n",
-      "\n",
-      "#  This video is unavailable.\n",
-      "\n",
-      "### Watch Queue\n",
-      "\n",
-      "### Queue\n",
-      "\n",
-      "Watch QueueQueue\n",
-      "\n",
-      "  * Remove all\n",
-      "  * Disconnect\n",
-      "\n",
-      "Loading...\n",
-      "\n",
-      "Watch Queue\n",
-      "\n",
-      "Queue\n",
-      "\n",
-      "__count__/__total__\n",
-      "\n",
-      "[Find out\n",
-      "why](https://www.google.com/get/videoqualityreport/?v=qfGthiqwaZo)Close\n",
-      "\n",
-      "#  Quick and dirty web scraping with Python\n",
-      "\n",
-      "[ ![Randy Olson](https://s.ytimg.com/yts/img/pixel-vfl3z5WfW.gif)\n",
-      "](/user/Rhiever)\n",
-      "\n",
-      "[Randy Olson](/channel/UCvEj2pLBlh_LpfJx7LxXh9A)\n",
-      "\n",
-      "SubscribeSubscribedUnsubscribe155155\n",
-      "\n",
-      "Loading...\n",
-      "\n",
-      "Loading...\n",
-      "\n",
-      "Working...\n",
-      "\n",
-      "Add to\n",
-      "\n",
-      "### Want to watch this again later?\n",
-      "\n",
-      "Sign in to add this video to a playlist.\n",
-      "\n",
-      "[Sign\n",
-      "in](https://accounts.google.com/ServiceLogin?passive=true&hl=en&continue=https%3A%2F%2Fwww.youtube.com%2Fsignin%3Ffeature%3D__FEATURE__%26hl%3Den%26next%3D%252Fwatch%253Fv%253DqfGthiqwaZo%26action_handle_signin%3Dtrue%26app%3Ddesktop&uilel=3&service=youtube)\n",
-      "\n",
-      "Share\n",
-      "\n",
-      "More\n",
-      "\n",
-      "  * Report\n",
-      "\n",
-      "### Need to report the video?\n",
-      "\n",
-      "Sign in to report inappropriate content.\n",
-      "\n",
-      "[Sign\n",
-      "in](https://accounts.google.com/ServiceLogin?passive=true&hl=en&continue=https%3A%2F%2Fwww.youtube.com%2Fsignin%3Ffeature%3D__FEATURE__%26hl%3Den%26next%3D%252Fwatch%253Fv%253DqfGthiqwaZo%26action_handle_signin%3Dtrue%26app%3Ddesktop&uilel=3&service=youtube)\n",
-      "\n",
-      "  * Statistics\n",
-      "\n",
-      "11,807 views\n",
-      "\n",
-      "84\n",
-      "\n",
-      "### Like this video?\n",
-      "\n",
-      "Sign in to make your opinion count.\n",
-      "\n",
-      "[Sign\n",
-      "in](https://accounts.google.com/ServiceLogin?passive=true&hl=en&continue=https%3A%2F%2Fwww.youtube.com%2Fsignin%3Ffeature%3D__FEATURE__%26hl%3Den%26next%3D%252Fwatch%253Fv%253DqfGthiqwaZo%26action_handle_signin%3Dtrue%26app%3Ddesktop&uilel=3&service=youtube)\n",
-      "\n",
-      "85 0\n",
-      "\n",
-      "### Don't like this video?\n",
-      "\n",
-      "Sign in to make your opinion count.\n",
-      "\n",
-      "[Sign\n",
-      "in](https://accounts.google.com/ServiceLogin?passive=true&hl=en&continue=https%3A%2F%2Fwww.youtube.com%2Fsignin%3Ffeature%3D__FEATURE__%26hl%3Den%26next%3D%252Fwatch%253Fv%253DqfGthiqwaZo%26action_handle_signin%3Dtrue%26app%3Ddesktop&uilel=3&service=youtube)\n",
-      "\n",
-      "1\n",
-      "\n",
-      "Loading...\n",
-      "\n",
-      "Loading...\n",
-      "\n",
-      "Loading...\n",
-      "\n",
-      "**Rating is available when the video has been rented.**\n",
-      "\n",
-      "This feature is not available right now. Please try again later.\n",
-      "\n",
-      "**Published on Jan 13, 2014**\n",
-      "\n",
-      "A short tutorial on quick and dirty web scraping with Python.  \n",
-      "  \n",
-      "Code from this video is here:\n",
-      "[http://nbviewer.ipython.org/gist/rhie...](http://nbviewer.ipython.org/gist/rhiever/8411589)  \n",
-      "  \n",
-      "** Make sure that you're allowed to scrape web sites before crawling their entire web site! You can get yourself banned from web sites if you crawl it too quickly. Look into \"robots.txt\" and the rules around web scraping. **\n",
-      "\n",
-      "  * ####  Category \n",
-      "\n",
-      "    * [Science &amp; Technology](/channel/UCiDF_uaU1V00dAc8ddKvNxA)\n",
-      "  * ####  License \n",
-      "\n",
-      "    * [Creative Commons Attribution license (reuse allowed)](https://www.youtube.com/t/creative_commons)\n",
-      "  * ####  Source videos \n",
-      "\n",
-      "    * [View attributions](http://www.youtube.com/attribution?v=qfGthiqwaZo)\n",
-      "\n",
-      "Show more Show less\n",
-      "\n",
-      "Loading...\n",
-      "\n",
-      "Autoplay When autoplay is enabled, a suggested video will automatically play\n",
-      "next.\n",
-      "\n",
-      "####  Up next\n",
-      "\n",
-      "  * [ Scrape Websites with Python + Beautiful Soup 4 + Requests -- Coding with Python  \\- Duration: 34:35.  CodingEntrepreneurs 178,955 views ](/watch?v=3xQTJi2tqgk \"Scrape Websites with Python + Beautiful Soup 4 + Requests -- Coding with Python\" )\n",
-      "\n",
-      "[![](https://s.ytimg.com/yts/img/pixel-vfl3z5WfW.gif)](/watch?v=3xQTJi2tqgk)\n",
-      "34:35\n",
-      "\n",
-      "* * *\n",
-      "\n",
-      "  * [ Learn Python Through Public Data Hacking  \\- Duration: 2:38:22.  Next Day Video 618,479 views ](/watch?v=RrPZza_vZ3w \"Learn Python Through Public Data Hacking\" )\n",
-      "\n",
-      "[![](https://s.ytimg.com/yts/img/pixel-vfl3z5WfW.gif)](/watch?v=RrPZza_vZ3w)\n",
-      "2:38:22\n",
-      "\n",
-      "  * [ Introduction to Web Scraping (Python) - Lesson 02 (Scrape Tables)  \\- Duration: 11:50.  SAF Business Analytics 6,869 views ](/watch?v=H8wUYz22joM \"Introduction to Web Scraping \\(Python\\) - Lesson 02 \\(Scrape Tables\\)\" )\n",
-      "\n",
-      "[![](https://s.ytimg.com/yts/img/pixel-vfl3z5WfW.gif)](/watch?v=H8wUYz22joM)\n",
-      "11:50\n",
-      "\n",
-      "  * [ Web Scraping in Python 101  \\- Duration: 20:18.  EuroPython 2014 5,527 views ](/watch?v=TeXRh17pB6c \"Web Scraping in Python 101\" )\n",
-      "\n",
-      "[![](https://s.ytimg.com/yts/img/pixel-vfl3z5WfW.gif)](/watch?v=TeXRh17pB6c)\n",
-      "20:18\n",
-      "\n",
-      "  * [ Creating a Python Mini-bot to Scrape Entire Website - Part 1  \\- Duration: 10:25.  Chris Hawkes 17,193 views ](/watch?v=RJNuqZii0-Y \"Creating a Python Mini-bot to Scrape Entire Website - Part 1\" )\n",
-      "\n",
-      "[![](https://s.ytimg.com/yts/img/pixel-vfl3z5WfW.gif)](/watch?v=RJNuqZii0-Y)\n",
-      "10:25\n",
-      "\n",
-      "  * [ Python Requests - 2. Using Python Requests to Log Into a Website  \\- Duration: 16:18.  Chris Hawkes 52,580 views ](/watch?v=eRSJSKG4mDA \"Python Requests - 2.  Using Python Requests to Log Into a Website\" )\n",
-      "\n",
-      "[![](https://s.ytimg.com/yts/img/pixel-vfl3z5WfW.gif)](/watch?v=eRSJSKG4mDA)\n",
-      "16:18\n",
-      "\n",
-      "  * [ The Ultimate Introduction to Web Scraping and Browser Automation  \\- Duration: 28:54.  Jordan Leigh 11,738 views ](/watch?v=1UYBAn69Qrk \"The Ultimate Introduction to Web Scraping and Browser Automation\" )\n",
-      "\n",
-      "[![](https://s.ytimg.com/yts/img/pixel-vfl3z5WfW.gif)](/watch?v=1UYBAn69Qrk)\n",
-      "28:54\n",
-      "\n",
-      "  * [ DEFCON 17: Screen Scraper Tricks: Extracting Data from Difficult Websites  \\- Duration: 42:41.  Christiaan008 43,578 views ](/watch?v=NtffxCi8aq4 \"DEFCON 17: Screen Scraper Tricks: Extracting Data from Difficult Websites\" )\n",
-      "\n",
-      "[![](https://s.ytimg.com/yts/img/pixel-vfl3z5WfW.gif)](/watch?v=NtffxCi8aq4)\n",
-      "42:41\n",
-      "\n",
-      "  * [ Python Page Spider Web Crawler Tutorial  \\- Duration: 26:55.  chris reeves 99,236 views ](/watch?v=SFas42HBtMg \"Python Page Spider Web Crawler Tutorial\" )\n",
-      "\n",
-      "[![](https://s.ytimg.com/yts/img/pixel-vfl3z5WfW.gif)](/watch?v=SFas42HBtMg)\n",
-      "26:55\n",
-      "\n",
-      "  * [ Python Web Scraping Tutorial - 1 | Python BeautifulSoup Tutorial | Python Tutorial | Edureka  \\- Duration: 1:23:44.  edureka! 20,090 views ](/watch?v=HfRKfxyLkrs \"Python Web Scraping Tutorial - 1 | Python BeautifulSoup Tutorial | Python Tutorial | Edureka\" )\n",
-      "\n",
-      "[![](https://s.ytimg.com/yts/img/pixel-vfl3z5WfW.gif)](/watch?v=HfRKfxyLkrs)\n",
-      "1:23:44\n",
-      "\n",
-      "  * [ Automated data scraping from websites into Excel  \\- Duration: 12:43.  Dinesh Kumar Takyar 290,534 views ](/watch?v=qbOdUaf4yfI \"Automated data scraping from websites into Excel\" )\n",
-      "\n",
-      "[![](https://s.ytimg.com/yts/img/pixel-vfl3z5WfW.gif)](/watch?v=qbOdUaf4yfI)\n",
-      "12:43\n",
-      "\n",
-      "  * [ Python Web Scraping Tutorial 3 (Downloading Stock Data)  \\- Duration: 14:05.  chris reeves 88,066 views ](/watch?v=f2h41uEi0xU \"Python Web Scraping Tutorial 3 \\(Downloading Stock Data\\)\" )\n",
-      "\n",
-      "[![](https://s.ytimg.com/yts/img/pixel-vfl3z5WfW.gif)](/watch?v=f2h41uEi0xU)\n",
-      "14:05\n",
-      "\n",
-      "  * [ Transforming Code into Beautiful, Idiomatic Python  \\- Duration: 48:51.  Next Day Video 207,832 views ](/watch?v=OSGv2VnC0go \"Transforming Code into Beautiful, Idiomatic Python\" )\n",
-      "\n",
-      "[![](https://s.ytimg.com/yts/img/pixel-vfl3z5WfW.gif)](/watch?v=OSGv2VnC0go)\n",
-      "48:51\n",
-      "\n",
-      "  * [ Parsing With Python's BeautifulSoup  \\- Duration: 14:21.  Chris Hawkes 20,810 views ](/watch?v=keefYknSbt4 \"Parsing With Python's BeautifulSoup\" )\n",
-      "\n",
-      "[![](https://s.ytimg.com/yts/img/pixel-vfl3z5WfW.gif)](/watch?v=keefYknSbt4)\n",
-      "14:21\n",
-      "\n",
-      "  * [ Python Web Scraping Tutorial 1 (Intro To Web Scraping)  \\- Duration: 6:14.  chris reeves 144,448 views ](/watch?v=E7wB__M9fdw \"Python Web Scraping Tutorial 1 \\(Intro To Web Scraping\\)\" )\n",
-      "\n",
-      "[![](https://s.ytimg.com/yts/img/pixel-vfl3z5WfW.gif)](/watch?v=E7wB__M9fdw)\n",
-      "6:14\n",
-      "\n",
-      "  * [ Scraping with Python  \\- Duration: 48:29.  Next Day Video 5,107 views ](/watch?v=bWk0P7w2aZg \"Scraping with Python\" )\n",
-      "\n",
-      "[![](https://s.ytimg.com/yts/img/pixel-vfl3z5WfW.gif)](/watch?v=bWk0P7w2aZg)\n",
-      "48:29\n",
-      "\n",
-      "  * [ Python Web Scraping Tutorial 7 (Getting 1 Minute Stock Data)  \\- Duration: 14:50.  chris reeves 23,473 views ](/watch?v=1RZRxJPVAC8 \"Python Web Scraping Tutorial 7 \\(Getting 1 Minute Stock Data\\)\" )\n",
-      "\n",
-      "[![](https://s.ytimg.com/yts/img/pixel-vfl3z5WfW.gif)](/watch?v=1RZRxJPVAC8)\n",
-      "14:50\n",
-      "\n",
-      "  * [ Python: A \"Toy\" Language  \\- Duration: 41:49.  Next Day Video 198,626 views ](/watch?v=BWyDA5y6TIg \"Python: A \"Toy\" Language\" )\n",
-      "\n",
-      "[![](https://s.ytimg.com/yts/img/pixel-vfl3z5WfW.gif)](/watch?v=BWyDA5y6TIg)\n",
-      "41:49\n",
-      "\n",
-      "  * [ Python 3 Programming Tutorial - Parsing Websites with re and urllib  \\- Duration: 7:29.  sentdex 43,857 views ](/watch?v=GEshegZzt3M \"Python 3 Programming Tutorial - Parsing Websites with re and urllib\" )\n",
-      "\n",
-      "[![](https://s.ytimg.com/yts/img/pixel-vfl3z5WfW.gif)](/watch?v=GEshegZzt3M)\n",
-      "7:29\n",
-      "\n",
-      "  * [ [Python] Extract informations out of a website using urllib2  \\- Duration: 10:51.  pentix 20,912 views ](/watch?v=M_4UIPLaIII \"\\[Python\\] Extract informations out of a website using urllib2\" )\n",
-      "\n",
-      "[![](https://s.ytimg.com/yts/img/pixel-vfl3z5WfW.gif)](/watch?v=M_4UIPLaIII)\n",
-      "10:51\n",
-      "\n",
-      "  * Loading more suggestions... \n",
-      "\n",
-      "Show more\n",
-      "\n",
-      "[](/ \"YouTube home\" )\n",
-      "\n",
-      "  * Language:  English \n",
-      "  * Content location:  United States \n",
-      "  * Restricted Mode:  Off \n",
-      "\n",
-      "[History](/feed/history) Help\n",
-      "\n",
-      "Loading...\n",
-      "\n",
-      "Loading...\n",
-      "\n",
-      "Loading...\n",
-      "\n",
-      "  * [About](//www.youtube.com/yt/about/)\n",
-      "  * [Press](//www.youtube.com/yt/press/)\n",
-      "  * [Copyright](//www.youtube.com/yt/copyright/)\n",
-      "  * [Creators](//www.youtube.com/yt/creators/)\n",
-      "  * [Advertise](//www.youtube.com/yt/advertise/)\n",
-      "  * [Developers](//www.youtube.com/yt/dev/)\n",
-      "  * [+YouTube](https://plus.google.com/+youtube)\n",
-      "\n",
-      "  * [Terms](/t/terms)\n",
-      "  * [Privacy](https://www.google.com/intl/en/policies/privacy/)\n",
-      "  * [ Policy &amp; Safety ](//www.youtube.com/yt/policyandsafety/)\n",
-      "  * [Send feedback](//support.google.com/youtube/?hl=en)\n",
-      "  * [Try something new!](/testtube)\n",
-      "  * \n",
-      "\n",
-      "Loading...\n",
-      "\n",
-      "Working...\n",
-      "\n",
-      "[Sign\n",
-      "in](https://accounts.google.com/ServiceLogin?passive=true&hl=en&continue=https%3A%2F%2Fwww.youtube.com%2Fsignin%3Ffeature%3Dplaylist%26hl%3Den%26next%3D%252Fwatch%253Fv%253DqfGthiqwaZo%26action_handle_signin%3Dtrue%26app%3Ddesktop&uilel=3&service=youtube)\n",
-      "to add this to Watch Later\n",
-      "\n",
-      "###  Add to\n",
-      "\n",
-      "Loading playlists...\n",
-      "\n",
-      "\n"
+      "Menu\n",
+      "Find jobs\n",
+      "At Amazon, our evolution has been driven by the spirit of innovation that is part of our DNA. As a new college graduate or intern, you can have multiple opportunities to innovate and solve real-world, complex technical and business problems as you join us on our journey.\n",
+      "We strive to hire the brightest minds from universities around the globe, and have various career opportunities available for undergraduates and advanced degree students with diverse academic backgrounds.\n",
+      "The work environment here is fast-paced and continually evolving, and every Amazonian is passionate about ownership and delivering results for the company. If you want to work in an environment that will challenge you to relentlessly improve the Amazon experience for our customers, where each day is different from the next, and your learning never truly ends, take a look at Amazon’s many University opportunities.\n",
+      "JOIN US ON\n",
+      "Find Careers\n",
+      "Working At Amazon\n",
+      "Help\n"
      ]
     }
    ],
    "source": [
-    "from html2text import html2text\n",
     "import requests\n",
+    "import bs4 as bs\n",
     "\n",
-    "r = requests.get('https://www.youtube.com/watch?v=qfGthiqwaZo')\n",
+    "sauce = requests.get('https://www.amazon.jobs/en/business_categories/university-recruiting?base_query=&loc_query=&job_count=10&result_limit=10&sort=relevant&cache').text\n",
+    "soup = bs.BeautifulSoup(sauce, 'lxml')\n",
     "\n",
-    "print(html2text(r.text))"
+    "\n",
+    "#print(soup.get_text())\n",
+    "\n",
+    "body = soup.body\n",
+    "for paragraph in body.find_all('p'):\n",
+    "    print(paragraph.text)"
    ]
   },
   {
