--- a/Wiki-Network.ipynb
+++ b/Wiki-Network.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -25,39 +26,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~tyfal/0.embed\" height=\"525\" width=\"100%\"></iframe>"
-      ],
-      "text/plain": [
-       "<plotly.tools.PlotlyDisplay object>"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import plotly.tools as tls\n",
+    "#to display in jupyter notebook\n",
     "\n",
-    "tls.embed('https://plot.ly/~tyfal/0')"
+    "#import plotly.tools as tls\n",
+    "#tls.embed('https://plot.ly/~tyfal/0')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "![Wiki-Network-Image](http://localhost:8888/files/Desktop/MachineLearning/MachineLearning/Images/wiki-network-image.png)"
+   ]
   }
  ],
  "metadata": {
