--- a/Wiki-Network.ipynb
+++ b/Wiki-Network.ipynb
@@ -44,7 +44,7 @@
     "collapsed": true
    },
    "source": [
-    "![Wiki-Network-Image](http://localhost:8888/files/Desktop/MachineLearning/MachineLearning/Images/wiki-network-image.png)"
+    "![Wiki-Network-Image](https://github.com/tyfal/Data-Science/blob/master/Images/wiki-network-image.png)"
    ]
   }
  ],
