--- a/Wiki-Network.ipynb
+++ b/Wiki-Network.ipynb
@@ -2,17 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "//anaconda/lib/python3.5/site-packages/plotly/plotly/plotly.py:236: UserWarning:\n",
+      "\n",
+      "Woah there! Look at all those points! Due to browser limitations, the Plotly SVG drawing functions have a hard time graphing more than 500k data points for line charts, or 40k points for other types of charts. Here are some suggestions:\n",
+      "(1) Use the `plotly.graph_objs.Scattergl` trace object to generate a WebGl graph.\n",
+      "(2) Trying using the image API to return an image instead of a graph URL\n",
+      "(3) Use matplotlib\n",
+      "(4) See if you can create your visualization with fewer data points\n",
+      "\n",
+      "If the visualization you're using aggregates points (e.g., box plot, histogram, etc.) you can disregard this warning.\n",
+      "\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "High five! You successfuly sent some data to your account on plotly. View your plot in your browser at https://plot.ly/~tyfal/0 or inside your plot.ly account where it is named 'wiki-network'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "//anaconda/lib/python3.5/site-packages/plotly/plotly/plotly.py:1443: UserWarning:\n",
+      "\n",
+      "Estimated Draw Time Too Long\n",
+      "\n"
      ]
     }
    ],
@@ -21,31 +47,31 @@
     "\n",
     "from wiki_web_crawler import WikiWeb\n",
     "\n",
-    "WikiWeb('https://en.wikipedia.org/wiki/Data_science').network()"
+    "WikiWeb('https://en.wikipedia.org/wiki/Donald_Trump').network()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "#to display in jupyter notebook\n",
+    "from wiki_web_crawler import WikiWeb\n",
     "\n",
-    "#import plotly.tools as tls\n",
-    "#tls.embed('https://plot.ly/~tyfal/0')"
+    "WikiWeb('https://en.wikipedia.org/wiki/Donald_Trump').shortest_path('/wiki/Political_status_of_Crimea', '/wiki/Luxury_yacht')"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "source": [
-    "![Wiki-Network-Image](https://github.com/tyfal/Data-Science/blob/master/Images/wiki-network-image.png)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
